--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.3",
+    "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
@@ -16,7 +18,8 @@
     "mongoose": "^6.4.6",
     "next": "12.2.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-redux": "^8.0.2"
   },
   "devDependencies": {
     "eslint": "8.20.0",
